Hide the images until they submit the form

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,16 @@
+#lasvegas {
+  display: none;
+}
 
+#disneyland {
+  display: none;
+}
+
+
+#hawaii {
+  display: none;
+}
+
+#house {
+  display: none;
+}
